/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2021-03-15 10:00 UTC+0100 Wilfried Brunken DF7BE
  * bin (New directory)
  * bin/empty.txt (New)
  * install.txt
  * utils/bincnt/bincnt.hbp
  * utils/bincnt/file2hex.hbp
  * utils/dbc/dbchw.hbp
  * utils/dbc/dbchw.prg
  * utils/debugger/hwgdebug.hbp
  * utils/debugger/hwgdebug.prg
  * utils/designer/designer.hbp
  * utils/editor/editor.hbp
  * utils/tutorial/hwgrun.hbp
  * utils/tutorial/tutor.hbp
  ! Ticket #77:
  ! Project "hbcontainer" for LINUX,
  ! Now completed.
  ! Protocol of run appended to post to ticket.
  ! Some utils are now build in new directory "bin",
  ! can be added into the PATH variable,
  ! otherwise created in sample directory.
  ! (bincnt  dbchw  file2hex  hwgdebug,
  ! not designer and editor, because of existing app's)
  !
  ! Debugger Menu about on LINUX:
  ! Added submenu "About", because of "Aktiviere".
  ! TO-DO for debugger (severe bug on LINUX):
  ! After loading a program for debug,
  ! the menu points for debugging are not activated. 
  ! (Main menues "View" and "Run")

2021-03-15 09:41 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/gtk/draw.c
  * source/winapi/draw.c
    * New function added, hwg_Arc( hDC, xc, yc, radius, iAngleStart, iAngleEnd )
      to draw arc.

2021-03-14 15:30 UTC+0100 Wilfried Brunken DF7BE
  * samples/Readme.txt
  * samples/allhbp.hbp
  * samples/gtk_samples/dbview.hbp
  * samples/gtk_samples/progbars.prg
  * samples/gtk_samples/pseudocm.prg
  * samples/gtk_samples/testget2.prg
  * samples/gtk_samples/winprn.prg
  * utils/dbc/dbchw.hbp
  * utils/debugger/sample.hbp
  ! Ticket #77:
  ! Project "hbcontainer" for LINUX,
  ! only one util (DBC) must be fixed,
  ! the rest is OK.


2021-03-14 11:20 UTC+0100 Wilfried Brunken DF7BE
  * install.txt
  * contrib/hwg_misc.hbp (New)