@@ -313,7 +313,7 @@ METHOD Activate( lShow, lMaximize, lMinimize, lCentered, bActivate ) CLASS HMain
    IF ::type == WND_MAIN
       IF ::style < 0 .AND. hwg_Bitand( Abs( ::style ), Abs( WND_NOTITLE ) ) != 0
          hwg_WindowSetDecorated( ::handle, 0 )
-         hwg_WindowSetResize( ::handle, 1 )
+         //hwg_WindowSetResize( ::handle, 1 )
       ENDIF
       hwg_ShowAll( ::handle )
       IF ::style < 0 .AND. hwg_Bitand( Abs( ::style ), Abs( WND_NOSIZEBOX ) ) != 0
