@@ -310,41 +310,67 @@ Return Nil
       <![CDATA[/* This sample demonstrates few ready to use dialog boxes */
 #include "hwgui.ch"
 Function Test
-   Local oDlg, oFont, oFontSay, oFontC
+   Local oDlg, oFont, oFontSay, oFontC, oSay3, oSay4, oSay5, oSay6, oSay7, y1 := 50, n
    Local nChoic, cRes, arr := {"White","Blue","Green","Red"}
 
    PREPARE FONT oFont NAME "MS Sans Serif" WIDTH 0 HEIGHT -13
    PREPARE FONT oFontSay NAME "MS Sans Serif" WIDTH 0 HEIGHT -13 WEIGHT 700
    PREPARE FONT oFontC NAME "Georgia" WIDTH 0 HEIGHT -15
 
-   INIT DIALOG oDlg TITLE "Standard dialogs" AT 100, 100 SIZE 340, 300 FONT oFont
+   INIT DIALOG oDlg TITLE "Standard dialogs" AT 100, 100 SIZE 340, 440 FONT oFont
 
    @ 20,12 SAY "Press any button to see a dialog" SIZE 260, 24 ;
          FONT oFontSay COLOR 8404992
 
-   @ 20,50 BUTTON "hwg_MsgInfo()" SIZE 180,28 ;
+   @ 20,y1 BUTTON "hwg_MsgInfo()" SIZE 180,28 ;
       ON CLICK {||hwg_MsgInfo("Info dialog","Tutorial")}
-
-   @ 20,80 BUTTON "hwg_MsgStop()" SIZE 180,28 ;
+   y1 += 30
+   
+   @ 20,y1 BUTTON "hwg_MsgStop()" SIZE 180,28 ;
       ON CLICK {||hwg_MsgStop("Error message","Tutorial")}
+   y1 += 30
 
-   @ 20,110 BUTTON "hwg_MsgYesNo()" SIZE 180,28 ;
+   @ 20,y1 BUTTON "hwg_MsgYesNo()" SIZE 180,28 ;
       ON CLICK {||oSay3:SetText( Iif( hwg_MsgYesNo("Do you like it?","Tutorial"), "Yes","No" ) )}
-   @ 230,110 SAY oSay3 CAPTION "" SIZE 80,24 COLOR 8404992
+   @ 230,y1 SAY oSay3 CAPTION "" SIZE 80,24 COLOR 8404992
+   y1 += 30
 
-   @ 20,140 BUTTON "hwg_MsgOkCancel()" SIZE 180,28 ;
+   @ 20,y1 BUTTON "hwg_MsgOkCancel()" SIZE 180,28 ;
       ON CLICK {||hwg_MsgOkCancel("Confirm action","Tutorial")}
+   y1 += 30
 
-   @ 20,170 BUTTON "hwg_MsgGet()" SIZE 180,28 ;
-      ON CLICK {||oSay5:SetText( Iif( (cRes := hwg_MsgGet("Input something","Tutorial")) == Nil, "", cRes ) )}
-   @ 230,170 SAY oSay5 CAPTION "" SIZE 80,24 COLOR 8404992
+#ifdef __PLATFORM__WINDOWS
+   @ 20,y1 BUTTON "hwg_MsgNoYes()" SIZE 180,28 ;
+      ON CLICK {||oSay4:SetText( Iif( hwg_MsgNoYes("Do you like it?","Tutorial"), "Yes","No" ) )}
+   @ 230,y1 SAY oSay4 CAPTION "" SIZE 80,24 COLOR 8404992
+   y1 += 30
 
-   @ 20,200 BUTTON "hwg_WChoice()" SIZE 180,28 ;
-      ON CLICK {||oSay6:SetText( Iif( (nChoic := hwg_WChoice(arr,"Tutorial",,,oFontC,,,,,"Ok","Cancel")) == 0, "", arr[nChoic] ) )}
-   @ 230,200 SAY oSay6 CAPTION "" SIZE 80,24 COLOR 8404992
+   @ 20,y1 BUTTON "hwg_MsgRetryCancel()" SIZE 180,28 ;
+      ON CLICK {||hwg_MsgRetryCancel("Retry action","Tutorial")}
+   y1 += 30
 
-   @ 20, 250 LINE LENGTH 300
-   @ 120,258 BUTTON "Close" SIZE 100,30 ON CLICK {||oDlg:Close()}
+#endif
+
+   @ 20,y1 BUTTON "hwg_MsgYesNoCancel()" SIZE 180,28 ;
+      ON CLICK {||oSay5:SetText( Ltrim(Str(hwg_MsgYesNoCancel("Do you like it?","Tutorial"))) )}
+   @ 230,y1 SAY oSay5 CAPTION "" SIZE 80,24 COLOR 8404992
+   y1 += 30
+
+   @ 20,y1 BUTTON "hwg_MsgExclamation()" SIZE 180,28 ;
+      ON CLICK {||hwg_MsgExclamation("Happy birthday!","Tutorial")}
+   y1 += 30
+
+   @ 20,y1 BUTTON "hwg_MsgGet()" SIZE 180,28 ;
+      ON CLICK {||oSay6:SetText( Iif( (cRes := hwg_MsgGet("Input something","Tutorial")) == Nil, "", cRes ) )}
+   @ 230,y1 SAY oSay6 CAPTION "" SIZE 80,24 COLOR 8404992
+   y1 += 30
+
+   @ 20,y1 BUTTON "hwg_WChoice()" SIZE 180,28 ;
+      ON CLICK {||oSay7:SetText( Iif( (nChoic := hwg_WChoice(arr,"Tutorial",,,oFontC,,,,,"Ok","Cancel")) == 0, "", arr[nChoic] ) )}
+   @ 230,y1 SAY oSay7 CAPTION "" SIZE 80,24 COLOR 8404992
+
+   @ 20, y1+50 LINE LENGTH 300
+   @ 120,oDlg:nHeight-40 BUTTON "Close" SIZE 100,30 ON CLICK {||oDlg:Close()}
 
    ACTIVATE DIALOG oDlg
   
